--- a/views/profile2.ejs
+++ b/views/profile2.ejs
@@ -53,7 +53,7 @@
 
       <!-- Add a post, file, caption, link -->
       <section>
-        <div class="md:flex bg-indigo-600 text-indigo-100">
+        <div class="flex item-center bg-indigo-600 text-indigo-100">
           <h3 class="text-2xl md:text-4xl lg:text-6xl text-white mb-6">ADD A POST </h3>
         </div>
         <%= typeof msg != 'undefined' ? msg : '' %> <!-- an error message if an unsupported clip is uploaded -->
@@ -89,7 +89,84 @@
                   <img class="img-fluid" src="<%= post[i].image%>">
                 </a>
             <% } %> 
-    </div>  
+    </div> 
+
+    
+
+
+
+
+
+
+    <!-- CARD COLUMNS -->
+    <div class="container mt-5 mx-auto px-3">
+      <!-- Flex on med screens and up -->
+      <div class="md:flex">
+        <div
+          class="flex-1 text-gray-700 text-center bg-gray-400 px-5 py-5 m-2 rounded"
+        >
+          <div class="lg:flex lg:items-center">
+            <div class="lg:flex-shrink-0">
+              <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
+            </div>
+            <div class="mt-4 lg:mt-0 lg:ml-6">
+              <div
+                class="uppercase tracking-wide text-sm text-indigo-600 font-bold"
+              >
+                Networking
+              </div>
+              <a
+                href="#"
+                class="block mt-1 text-lg leading-tight font-semibold text-gray-900 hover:underline"
+                >Finding connections to help your business grow</a
+              >
+            </div>
+          </div>
+        </div>
+        <div
+          class="flex-1 text-gray-700 text-center bg-gray-400 px-5 py-5 m-2 rounded"
+        >
+          <div class="lg:flex lg:items-center">
+            <div class="lg:flex-shrink-0">
+              <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
+            </div>
+            <div class="mt-4 lg:mt-0 lg:ml-6">
+              <div
+                class="uppercase tracking-wide text-sm text-indigo-600 font-bold"
+              >
+                Marketing
+              </div>
+              <a
+                href="#"
+                class="block mt-1 text-lg leading-tight font-semibold text-gray-900 hover:underline"
+                >Finding customers for your new business</a
+              >
+            </div>
+          </div>
+        </div>
+        <div
+          class="flex-1 text-gray-700 text-center bg-gray-400 px-5 py-5 m-2 rounded"
+        >
+          <div class="lg:flex lg:items-center">
+            <div class="lg:flex-shrink-0">
+              <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
+            </div>
+            <div class="mt-4 lg:mt-0 lg:ml-6">
+              <div
+                class="uppercase tracking-wide text-sm text-indigo-600 font-bold"
+              >
+                Marketing
+              </div>
+              <a
+                href="#"
+                class="block mt-1 text-lg leading-tight font-semibold text-gray-900 hover:underline"
+                >Finding customers for your new business</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <% } %>   
     
 
