--- a/views/profile2.ejs
+++ b/views/profile2.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <!-- <link rel="stylesheet" href="/css/addPost/style.css" /> -->
   </head>
-  <body>
+  <body class="bg-green-700">
     <% { %>
       <section class="bg-indigo-700 p-4 flex justify-between items-center">
         <!-- Left -->
@@ -52,121 +52,92 @@
       </section>
 
       <!-- Add a post, file, caption, link -->
-      <section>
-        <div class="flex item-center bg-indigo-600 text-indigo-100">
-          <h3 class="text-2xl md:text-4xl lg:text-6xl text-white mb-6">ADD A POST </h3>
+      <section class="container mt-5 px-3">
+        <div class="flex item-center bg-indigo-600 text-indigo-100 ml-1">
+          <h3 class="text-2xl md:text-4xl lg:text-6xl text-white mx-auto">ADD A POST </h3>
         </div>
         <%= typeof msg != 'undefined' ? msg : '' %> <!-- an error message if an unsupported clip is uploaded -->
-          <div>
-            <form action="/post/addPost" enctype="multipart/form-data" method="POST">
-    
-              <div>
-                <label for="content">Got a Pic?</label>
-                <span> Only supports: .jpg, .png, jpeg,</span>
-                <input class="content" type="file" name="file" />
+        <!-- CARD COLUMNS -->
+        <!-- Flex on med screens and up -->
+        <div class="md:flex justify-content">
+
+
+
+          <div
+            class="flex-1 text-gray-700 text-center bg-indigo-400 px-5 py-5 m-2 rounded"
+          >
+            <div class="lg:flex lg:items-center">
+              <div class="lg:flex-shrink-0">
+                <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
               </div>
-              <div>
-                <label for="caption">Give us a Caption</label>
-                <input type="text" name="caption" placeholder="CLEVER CAPTION"/>
+              <div class="mt-4 lg:mt-0 lg:ml-6">
+                <form action="/post/addPost" enctype="multipart/form-data" method="POST" class="mt-4 lg:mt-0 lg:ml-6">
+                  <div class="uppercase tracking-wide text-sm text-indigo-600 font-bold" >
+                    <label for="caption">Got a Pic?</label>
+                    <span> Only supports: .jpg, .png, jpeg,</span>
+                    <input class="block mt-1 text-lg leading-tight font-semibold text-gray-900 hover:underline" type="file" name="file" />
+                  </div>
+                </form>
               </div>
-              <div>
-                <label for="clip">Got a Twitch Clip? Paste it here</label>
-                <input type="text" name="clip" placeholder="TWITCH LINK"/>
-              </div>
-              <button type="submit">Upload...BOOM!</button>
-            </form>
+            </div>
           </div>
+          
+          <div
+            class="flex-1 text-gray-700 text-center bg-indigo-400 px-5 py-5 m-2 rounded"
+          >
+            <div class="lg:flex lg:items-center">
+              <div class="lg:flex-shrink-0">
+                <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
+              </div>
+              <form action="/post/addPost" enctype="multipart/form-data" method="POST" class="mt-4 lg:mt-0 lg:ml-6">
+                <div class="uppercase tracking-wide text-sm text-indigo-600 font-bold" >
+                  <label for="caption">Give us a Caption</label>
+                  <input type="text" name="caption" placeholder="CLEVER CAPTION"/>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div
+            class="flex-1 text-gray-700 text-center bg-gray-400 px-5 py-5 m-2 rounded"
+          >
+            <div class="lg:flex lg:items-center">
+              <div class="lg:flex-shrink-0">
+                <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
+              </div>
+              <div class="mt-4 lg:mt-0 lg:ml-6">
+                <form action="/post/addPost" enctype="multipart/form-data" method="POST" class="mt-4 lg:mt-0 lg:ml-6">
+                  <div class="uppercase tracking-wide text-sm text-indigo-600 font-bold">
+                    <label for="caption">Got a Twitch Clip? Paste it here</label>
+                    <input type="text" name="clip" placeholder="TWITCH LINK"/>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="inline-block py-3 px-6 text-lg bg-gray-400 text-gray-800 hover:bg-gray-300 rounded  mx-auto">
+          <button type="submit" >Upload...BOOM!</button>
+        </div>
         
       </section>
+
+
+          
    
-
-    <div class="posts">
-        <p>Here are my posts:</p>
-        <ul class="row list-unstyled">
-            <% for(let i=0; i < post.length; i++) {%>
-                <p> <%= post[i].caption %> </p>
-                <a href="/post/<%= post[i]._id%>">
-                  <img class="img-fluid" src="<%= post[i].image%>">
-                </a>
-            <% } %> 
+  <section>
+    <div class="flex text-align-center uppercase tracking-wide text-sm text-indigo-600 font-bold posts">
+      <p>Here are my posts:</p>
+      <ul class="row list-unstyled">
+          <% for(let i=0; i < post.length; i++) {%>
+              <p> <%= post[i].caption %> </p>
+              <a href="/post/<%= post[i]._id%>">
+                <img class="img-fluid" src="<%= post[i].image%>">
+              </a>
+          <% } %> 
     </div> 
-
+  </section>
     
 
-
-
-
-
-
-    <!-- CARD COLUMNS -->
-    <div class="container mt-5 mx-auto px-3">
-      <!-- Flex on med screens and up -->
-      <div class="md:flex">
-        <div
-          class="flex-1 text-gray-700 text-center bg-gray-400 px-5 py-5 m-2 rounded"
-        >
-          <div class="lg:flex lg:items-center">
-            <div class="lg:flex-shrink-0">
-              <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
-            </div>
-            <div class="mt-4 lg:mt-0 lg:ml-6">
-              <div
-                class="uppercase tracking-wide text-sm text-indigo-600 font-bold"
-              >
-                Networking
-              </div>
-              <a
-                href="#"
-                class="block mt-1 text-lg leading-tight font-semibold text-gray-900 hover:underline"
-                >Finding connections to help your business grow</a
-              >
-            </div>
-          </div>
-        </div>
-        <div
-          class="flex-1 text-gray-700 text-center bg-gray-400 px-5 py-5 m-2 rounded"
-        >
-          <div class="lg:flex lg:items-center">
-            <div class="lg:flex-shrink-0">
-              <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
-            </div>
-            <div class="mt-4 lg:mt-0 lg:ml-6">
-              <div
-                class="uppercase tracking-wide text-sm text-indigo-600 font-bold"
-              >
-                Marketing
-              </div>
-              <a
-                href="#"
-                class="block mt-1 text-lg leading-tight font-semibold text-gray-900 hover:underline"
-                >Finding customers for your new business</a
-              >
-            </div>
-          </div>
-        </div>
-        <div
-          class="flex-1 text-gray-700 text-center bg-gray-400 px-5 py-5 m-2 rounded"
-        >
-          <div class="lg:flex lg:items-center">
-            <div class="lg:flex-shrink-0">
-              <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
-            </div>
-            <div class="mt-4 lg:mt-0 lg:ml-6">
-              <div
-                class="uppercase tracking-wide text-sm text-indigo-600 font-bold"
-              >
-                Marketing
-              </div>
-              <a
-                href="#"
-                class="block mt-1 text-lg leading-tight font-semibold text-gray-900 hover:underline"
-                >Finding customers for your new business</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <% } %>   
     
 
