--- a/views/profile2.ejs
+++ b/views/profile2.ejs
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
-    <!-- <link rel="stylesheet" href="/css/addPost/style.css" /> -->
   </head>
   <body class="bg-green-700">
     <% { %>
@@ -52,72 +51,81 @@
       </section>
 
       <!-- Add a post, file, caption, link -->
-      <section class="container mt-5 px-3">
-        <div class="flex item-center bg-indigo-600 text-indigo-100 ml-1">
-          <h3 class="text-2xl md:text-4xl lg:text-6xl text-white mx-auto">ADD A POST </h3>
-        </div>
-        <%= typeof msg != 'undefined' ? msg : '' %> <!-- an error message if an unsupported clip is uploaded -->
+      <section class="px-auto">
+        <section>
+          <div class="flex item-center bg-indigo-500 text-indigo-100">
+            <h3 class="text-2xl md:text-4xl lg:text-6xl text-white mx-auto">ADD A POST </h3>
+          </div>
+          <%= typeof msg != 'undefined' ? msg : '' %> <!-- an error message if an unsupported clip is uploaded -->
+        </section>
+
+
         <!-- CARD COLUMNS -->
         <!-- Flex on med screens and up -->
-        <div class="md:flex justify-content">
-
-
-
-          <div
-            class="flex-1 text-gray-700 text-center bg-indigo-400 px-5 py-5 m-2 rounded"
-          >
-            <div class="lg:flex lg:items-center">
-              <div class="lg:flex-shrink-0">
-                <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
+        <section class="flex mx-auto">
+          <div class="md:flex justify-content flex-wrap">
+            <div
+              class="flex-1 text-gray-700 text-center bg-indigo-400 px-5 py-5 m-2 rounded"
+            >
+              <div class="lg:flex lg:items-center">
+                <div class="lg:flex-shrink-0">
+                  <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
+                </div>
+                <div class="mt-4 lg:mt-0 lg:ml-6">
+                  <form action="/post/addPost" enctype="multipart/form-data" method="POST" class="mt-4 lg:mt-0 lg:ml-6">
+                    <div class="uppercase tracking-wide text-sm text-indigo-600 font-bold" >
+                      <label for="caption">Got a Pic?</label>
+                      <span> Only supports: .jpg, .png, jpeg,</span>
+                      <input class="block mt-1 text-lg leading-tight font-semibold text-gray-900 hover:underline" type="file" name="file" />
+                    </div>
+                  </form>
+                </div>
               </div>
-              <div class="mt-4 lg:mt-0 lg:ml-6">
+            </div>
+            
+            <div
+              class="flex-1 text-gray-700 text-center bg-indigo-400 px-5 py-5 m-2 rounded"
+            >
+              <div class="lg:flex lg:items-center">
+                <div class="lg:flex-shrink-0">
+                  <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
+                </div>
                 <form action="/post/addPost" enctype="multipart/form-data" method="POST" class="mt-4 lg:mt-0 lg:ml-6">
                   <div class="uppercase tracking-wide text-sm text-indigo-600 font-bold" >
-                    <label for="caption">Got a Pic?</label>
-                    <span> Only supports: .jpg, .png, jpeg,</span>
-                    <input class="block mt-1 text-lg leading-tight font-semibold text-gray-900 hover:underline" type="file" name="file" />
+                    <label for="caption">Give us a Caption</label>
+                    <input type="text" name="caption" placeholder="CLEVER CAPTION"/>
                   </div>
                 </form>
+              </div>
+            </div>
+            <div
+              class="flex-1 text-gray-700 text-center bg-gray-400 px-5 py-5 m-2 rounded"
+            >
+              <div class="lg:flex lg:items-center">
+                <div class="lg:flex-shrink-0">
+                  <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
+                </div>
+                <div class="mt-4 lg:mt-0 lg:ml-6">
+                  <form action="/post/addPost" enctype="multipart/form-data" method="POST" class="mt-4 lg:mt-0 lg:ml-6">
+                    <div class="uppercase tracking-wide text-sm text-indigo-600 font-bold">
+                      <label for="caption">Got a Twitch Clip? Paste it here</label>
+                      <input type="text" name="clip" placeholder="TWITCH LINK"/>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
           
-          <div
-            class="flex-1 text-gray-700 text-center bg-indigo-400 px-5 py-5 m-2 rounded"
-          >
-            <div class="lg:flex lg:items-center">
-              <div class="lg:flex-shrink-0">
-                <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
-              </div>
-              <form action="/post/addPost" enctype="multipart/form-data" method="POST" class="mt-4 lg:mt-0 lg:ml-6">
-                <div class="uppercase tracking-wide text-sm text-indigo-600 font-bold" >
-                  <label for="caption">Give us a Caption</label>
-                  <input type="text" name="caption" placeholder="CLEVER CAPTION"/>
-                </div>
-              </form>
-            </div>
+        </section>
+
+        <!-- Button -->
+        <section class="flex-wrap">
+          <div class="inline-block py-3 px-6 text-lg bg-gray-400 text-gray-800 hover:bg-gray-300 rounded mx-auto">
+            <button type="submit" >Upload...BOOM!</button>
           </div>
-          <div
-            class="flex-1 text-gray-700 text-center bg-gray-400 px-5 py-5 m-2 rounded"
-          >
-            <div class="lg:flex lg:items-center">
-              <div class="lg:flex-shrink-0">
-                <img class="rounded-lg lg:w-64" src="https://i.ibb.co/w4wGYvQ/img1.jpg" alt="">
-              </div>
-              <div class="mt-4 lg:mt-0 lg:ml-6">
-                <form action="/post/addPost" enctype="multipart/form-data" method="POST" class="mt-4 lg:mt-0 lg:ml-6">
-                  <div class="uppercase tracking-wide text-sm text-indigo-600 font-bold">
-                    <label for="caption">Got a Twitch Clip? Paste it here</label>
-                    <input type="text" name="clip" placeholder="TWITCH LINK"/>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="inline-block py-3 px-6 text-lg bg-gray-400 text-gray-800 hover:bg-gray-300 rounded  mx-auto">
-          <button type="submit" >Upload...BOOM!</button>
-        </div>
+        </section>
+
         
       </section>
 
@@ -137,21 +145,6 @@
     </div> 
   </section>
     
-
     <% } %>   
-    
-
-
-
-    <!-- <section class="column">
-        <section class="right">
-            <ul class="nav">
-                <li>Home</li>
-                <li><a href='/feed'>Feed</a></li>
-                <li><a href='/post/randomPost'>Random Post</a></li>
-                <li><a href='/auth/logout'>Logout</a></li>
-            </ul>
-        </section>
-    </section> -->
   </body>
 </html>
