--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../public/css/posts/style.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+  <head> <script src="https://kit.fontawesome.com/7cff8bdceb.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" />
+  <link rel="stylesheet" href="\css\post\post-style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= post.caption %></title>
   </head>
   <body>
+         <!--Sidebar-->
+         <section class="sidebar">
+          <i class="fas fa-arrow-circle-up"></i>
+          <a href="/feed">Back to Feed</a>
+          <i class="fas fa-link"></i>
+          <a href="/profile">Submit Post</a>
+          <i class="fas fa-quote-right"></i>
+          <a href="/quotes/addQuote">Submit Leon Quote</a>
+          <i class="fas fa-magic"></i>
+          <a href="/post/randomPost">Random Post Automagic</a>
+          <i class="fas fa-id-badge"></i>
+          <a href="/profile">Profile</a>
+          <i class="fas fa-sign-out-alt"></i>
+          <a href="/auth/logout">Logout</a>
+    
+        </section>
     <!-- Renders a single Post -->
-
+<main>
       <h1 class='caption'><%= post.caption %></h1>
       <span class='author'>Author: <%= post.author%> </span>
       <% if(post.clip != '') {%>
-        <div>
+        <div class="new-post">
             <iframe src='<%= post.clip %>'></iframe>
             </div>
               <% } else { %>
@@ -34,24 +57,20 @@
           <button class="fa fa-trash" type='submit'></button>
         </form>
         <% } %>
-          <div>
+          <div class="post-container">
+            <section class="num-likes">
             <% if (post.likes) { %>
-                <span><%= post.likes %></span>
+                <span><%= post.likes %></span><span> LIKES</span>
             <% } %>
+          </section>
             <form action="/post/<%= post._id %>/addLike?_method=PUT" method='POST'>
               <button type="submit">
               <img style='width: 40px' src='/imgs/nun.png'/></button>
           </a></form>
           </div>
-        <section class="column">
-          <section class="right">
-              <ul class="nav">
-                  <li><a href='/feed'>Feed</a></li>
-                  <li><a href='/profile'>Profile</a></li>
-                  <li><a href="/auth/logout">Logout</a></li>
-              </ul>
-          </section>
+
       </section>
+    </main>
         <!-- Iframe is causing page to break so nothing will show below it. Twitch allows you to directly src twitch clips SEE README -->
       <script type='text/javascript' src="js/main.js"></script>
   </body>
