--- a/views/profile2.ejs
+++ b/views/profile2.ejs
@@ -55,11 +55,13 @@
         <p>Here are my posts:</p>
         <ul class="row list-unstyled">
             <% for(let i=0; i < post.length; i++) {%>
-                <p> <%= post[i].caption %> </p>
+                <!-- <p> <%= post[i].caption %> </p> -->
                 <a href="/post/<%= post[i]._id%>">
-                  <img class="img-fluid" src="<%= post[i].image%>">
+                  <!-- <img class="img-fluid" src="<%= post[i].image%>"> -->
+                  <p> <%= post[i].caption %> </p>
                 </a>
             <% } %> 
+            
     </div>  
     <% } %>   
 
@@ -76,19 +78,19 @@
           </a>
         </li>
         <li class="mr-3 flex-1">
+          <a href="/feed"
+            class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
+            <i class="fas fa-magic pr-0 md:pr-3"></i><span
+              class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Feed</span>
+          </a>
+        </li>
+        <!-- <li class="mr-3 flex-1">
           <a href="/profile"
             class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
             <i class="fas fa-link pr-0 md:pr-3"></i><span
               class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Submit Post</span>
           </a>
-        </li>
-        <li class="mr-3 flex-1">
-          <a href="/quotes/addQuote"
-            class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
-            <i class="fas fa-quote-right pr-0 md:pr-3"></i><span
-              class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Submit Leon Quote</span>
-          </a>
-        </li>
+        </li> -->
         <li class="mr-3 flex-1">
           <a href="/post/randomPost"
             class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
@@ -96,13 +98,13 @@
               class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Random Post Automagic</span>
           </a>
         </li>
-        <li class="mr-3 flex-1">
+        <!-- <li class="mr-3 flex-1">
           <a href="/profile"
             class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
             <i class="fas fa-id-badge pr-0 md:pr-3"></i><span
               class="pb-1 md:pb-0 text-xs md:text-base text-gray-600 md:text-gray-400 block md:inline-block">Profile</span>
           </a>
-        </li>
+        </li> -->
         <li class="mr-3 flex-1">
           <a href="/info"
             class="block py-1 md:py-3 pl-1 align-middle text-gray-800 no-underline hover:text-pink-500 border-b-2 border-gray-800 md:border-gray-900 hover:border-pink-500">
